// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots display/Chip Chip List Group 1`] = `
<ul
  className="sc-gsnTZi cgptcv"
>
  <li
    className="sc-bczRLJ eCwSUC"
    color="secondary"
  >
    Chip No.1
  </li>
  <li
    className="sc-bczRLJ kFRnpC"
    color="primary"
  >
    Chip No.2
  </li>
  <li
    className="sc-bczRLJ eCwSUC"
    color="secondary"
  >
    Chip No.3
  </li>
  <li
    className="sc-bczRLJ kaQvzq"
    color="primary"
  >
    Chip No.4
  </li>
  <li
    className="sc-bczRLJ epEICQ"
    color="secondary"
  >
    Chip No.5
  </li>
  <li
    className="sc-bczRLJ kaQvzq"
    color="primary"
  >
    Chip No.6
  </li>
  <li
    className="sc-bczRLJ eCwSUC"
    color="secondary"
  >
    Chip No.7
  </li>
  <li
    className="sc-bczRLJ kFRnpC"
    color="primary"
  >
    Chip No.8
  </li>
</ul>
`;

exports[`Storyshots display/Chip Disabled 1`] = `
<li
  className="sc-bczRLJ hzoKJI"
  color="primary"
  disabled={true}
>
  Disabled
</li>
`;

exports[`Storyshots display/Chip Docs 1`] = `
<li
  className="sc-bczRLJ kaQvzq"
  color="primary"
>
  Docs
</li>
`;

exports[`Storyshots display/Chip Outlined 1`] = `
<li
  className="sc-bczRLJ epEICQ"
  color="secondary"
>
  Outlined
</li>
`;

exports[`Storyshots display/Tooltip Docs 1`] = `
<div
  className="sc-eCYdqJ cbCfkw"
>
  <div
    className="sc-hKMtZM jkyQbP"
    visibleOnHover={true}
  >
    <button
      className="sc-jSMfEi XGztO"
    >
      hover me
    </button>
    <span
      className="sc-dkzDqf leJesx"
      color="primary"
    >
      tooltip sample
    </span>
  </div>
</div>
`;

exports[`Storyshots display/Tooltip With State 1`] = `
<div
  className="sc-eCYdqJ cbCfkw"
>
  <div
    className="sc-hKMtZM gBhVIF"
    show={false}
  >
    <button
      className="sc-jSMfEi XGztO"
      onClick={[Function]}
    >
      hover me
    </button>
    ,
    <span
      className="sc-dkzDqf leJesx"
      color="primary"
    >
      tooltip
    </span>
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Docs 1`] = `
<div
  className="sc-papXJ hGPLWl"
>
  <div
    className="sc-iBkjds flKMFr"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ sc-jqUVSM djYUnP"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-ftvSup ejqkzc"
  >
    snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Error 1`] = `
<div
  className="sc-papXJ cuUsvL"
>
  <div
    className="sc-iBkjds flKMFr"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ sc-jqUVSM djYUnP"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-ftvSup ejqkzc"
  >
    Error snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Info 1`] = `
<div
  className="sc-papXJ hGPLWl"
>
  <div
    className="sc-iBkjds flKMFr"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ sc-jqUVSM djYUnP"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-ftvSup ejqkzc"
  >
    Info snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Long Text 1`] = `
<div
  className="sc-papXJ hGPLWl"
>
  <div
    className="sc-iBkjds flKMFr"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ sc-jqUVSM djYUnP"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-ftvSup ejqkzc"
  >
    long long long long long long long long long long long long long long long long long long long long text
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Success 1`] = `
<div
  className="sc-papXJ iWfvOn"
>
  <div
    className="sc-iBkjds flKMFr"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ sc-jqUVSM djYUnP"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-ftvSup ejqkzc"
  >
    Success snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar Warning 1`] = `
<div
  className="sc-papXJ gFwVRu"
>
  <div
    className="sc-iBkjds flKMFr"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ sc-jqUVSM gFdlQX"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-ftvSup ejqkzc"
  >
    Warning snackbar
  </div>
</div>
`;

exports[`Storyshots feedback/Snackbar/SnackbarProvider Play 1`] = `
<div>
  <button
    className="sc-iqcoie cvwYVM"
    onClick={[Function]}
  >
    info
  </button>
  <button
    className="sc-iqcoie cvwYVM"
    onClick={[Function]}
  >
    success
  </button>
  <button
    className="sc-iqcoie cvwYVM"
    onClick={[Function]}
  >
    warning
  </button>
  <button
    className="sc-iqcoie cvwYVM"
    onClick={[Function]}
  >
    error
  </button>
</div>
`;

exports[`Storyshots feedback/dialogs/AlertDialog Docs 1`] = `
<div
  aria-labelledby="dialog-alert-dialog__label"
  aria-modal="true"
  className="sc-ksZaOG sc-hHLeRK jwDWhZ cYGiW"
  id="alert-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-crXcEl lytTS"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gKXOVf cunure"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-evZas iJqXLE"
    id="dialog-alert-dialog__label"
  >
    AlertDialog sample
  </h2>
  <div
    className="sc-breuTD lofEAI"
  >
    <div
      className="sc-hAZoDl iOudKu"
    >
      AlertDialog contents
    </div>
    <div
      className="sc-dIouRR giHWXH"
    >
      <button
        className="sc-bjUoiL fqUvYH sc-idiyUo"
        color="secondary"
        onClick={[Function]}
        type="button"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/ConfirmDialog Docs 1`] = `
<div
  aria-labelledby="dialog-confirm-dialog__label"
  aria-modal="true"
  className="sc-ksZaOG sc-dmRaPn jwDWhZ lcgujW"
  id="confirm-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-crXcEl lytTS"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gKXOVf cunure"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-evZas iJqXLE"
    id="dialog-confirm-dialog__label"
  >
    ConfirmDialog sample
  </h2>
  <div
    className="sc-breuTD lofEAI"
  >
    <div
      className="sc-hAZoDl iOudKu"
    >
      ConfirmDialog contents
    </div>
    <div
      className="sc-dIouRR giHWXH"
    >
      <button
        className="sc-bjUoiL fqUvYH sc-idiyUo"
        color="secondary"
        onClick={[Function]}
        type="button"
      >
        OK
      </button>
      <button
        className="sc-bjUoiL cFSRvq sc-idiyUo"
        color="default"
        onClick={[Function]}
        type="button"
      >
        キャンセル
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/CustomDialog Docs 1`] = `
<div
  aria-describedby="dialog-custom-dialog__described"
  aria-labelledby="dialog-custom-dialog__label"
  aria-modal="true"
  className="sc-ksZaOG jwDWhZ"
  id="custom-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-crXcEl lytTS"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gKXOVf cunure"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-evZas iJqXLE"
    id="dialog-custom-dialog__label"
  >
    Custom dialog sample
  </h2>
  <div
    className="sc-breuTD lofEAI"
    id="dialog-custom-dialog__described"
  >
    Custom dialog contents
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/DialogProvider Play 1`] = `
<div>
  <button
    className="sc-bBrHrO jjmOYf"
    onClick={[Function]}
  >
    Popup
  </button>
  <button
    className="sc-bBrHrO jjmOYf"
    onClick={[Function]}
  >
    Alert
  </button>
  <button
    className="sc-bBrHrO jjmOYf"
    onClick={[Function]}
  >
    Confirm
  </button>
  <button
    className="sc-bBrHrO jjmOYf"
    onClick={[Function]}
  >
    Select
  </button>
  <button
    className="sc-bBrHrO jjmOYf"
    onClick={[Function]}
  >
    Custom
  </button>
</div>
`;

exports[`Storyshots feedback/dialogs/PopupDialog Docs 1`] = `
<div
  aria-labelledby="dialog-popup-dialog__label"
  aria-modal="true"
  className="sc-ksZaOG jwDWhZ"
  id="popup-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-crXcEl lytTS"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gKXOVf cunure"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-evZas iJqXLE"
    id="dialog-popup-dialog__label"
  >
    PopupDialog sample
  </h2>
  <div
    className="sc-breuTD lofEAI"
  >
    <div
      className="sc-hAZoDl iOudKu"
    >
      PopupDialog contents
    </div>
  </div>
</div>
`;

exports[`Storyshots feedback/dialogs/SelectDialog Docs 1`] = `
<div
  aria-labelledby="dialog-select-dialog__label"
  aria-modal="true"
  className="sc-ksZaOG sc-kgflAQ jwDWhZ IOWQo"
  id="select-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-crXcEl lytTS"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gKXOVf cunure"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-evZas iJqXLE"
    id="dialog-select-dialog__label"
  >
    SelectDialog sample
  </h2>
  <div
    className="sc-breuTD lofEAI"
  >
    <div
      className="sc-hAZoDl iOudKu"
    >
      SelectDialog contents
    </div>
    <div
      className="sc-dIouRR giHWXH"
    >
      <button
        className="sc-bjUoiL fqUvYH sc-idiyUo"
        color="secondary"
        onClick={[Function]}
        type="button"
      >
        はい
      </button>
      <button
        className="sc-bjUoiL dVYXNF sc-idiyUo"
        color="primary"
        onClick={[Function]}
        type="button"
      >
        いいえ
      </button>
      <button
        className="sc-bjUoiL cFSRvq sc-idiyUo"
        color="default"
        onClick={[Function]}
        type="button"
      >
        キャンセル
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots forms/PasswordForm Docs 1`] = `
<div
  className="sc-kLLXSd jnFIIm"
>
  <label
    aria-describedby="password-form-describe"
    className="sc-ivTmOn doBtVo"
    htmlFor="password-form"
    inline={false}
    required={true}
  >
    PasswordForm
  </label>
  <div
    className="sc-cxabCf goGbmg"
  >
    <span
      id="password-form-describe"
    >
      半角英数6文字以上18文字以下で入力してください
    </span>
  </div>
  <div
    className="sc-bZkfAO iCCwRY"
  >
    <input
      className="sc-gicCDI eAamlG"
      hasError={false}
      id="password-form"
      name="password-docs"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="password sample"
      readOnly={false}
      type="password"
      value="PasswordForm sample"
    />
    <button
      className="sc-crXcEl lytTS sc-ezWOiH"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-label="パスワードを表示する"
        className="sc-gKXOVf dIMGbe"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6zm-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14zM2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45 2.01 3.87zm7.5 7.5l2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13zm-3.4-3.4l1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots forms/TextForm Docs 1`] = `
<div
  className="sc-himrzO laLFZS"
>
  <label
    aria-describedby="text-form-describe"
    className="sc-ivTmOn doBtVo"
    htmlFor="text-form"
    inline={false}
    required={true}
  >
    TextForm
  </label>
  <div
    className="sc-cxabCf goGbmg"
  >
    <span
      id="text-form-describe"
    >
      登録したメールアドレスを入力してください
    </span>
  </div>
  <div
    className="sc-jIZahH itKAIB"
  >
    <input
      className="sc-gicCDI eAamlG"
      hasError={false}
      id="text-form"
      name="text-form-docs"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="input sample"
      readOnly={false}
      type="text"
      value="TextForm sample"
    />
    <button
      className="sc-crXcEl lytTS sc-ikZpkk"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-label="text-form-docsの入力を削除する"
        className="sc-gKXOVf dIMGbe"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots inputs/Button Disabled 1`] = `
<button
  className="sc-bjUoiL ftqQVL"
  color="primary"
  disabled={true}
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots inputs/Button Docs 1`] = `
<button
  className="sc-bjUoiL dVYXNF"
  color="primary"
  onClick={[Function]}
  type="button"
  variant="contained"
>
  Docs
</button>
`;

exports[`Storyshots inputs/Button Loading 1`] = `
<button
  className="sc-bjUoiL ftqQVL"
  color="primary"
  disabled={true}
  type="button"
>
  <div
    className="sc-fEOsli heyrZw"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ sc-fnykZs jDVnbC"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
      />
    </svg>
    <span>
      Loading...
    </span>
  </div>
</button>
`;

exports[`Storyshots inputs/Button Outlined 1`] = `
<button
  className="sc-bjUoiL JPEwb"
  color="primary"
  type="button"
  variant="outlined"
>
  Outlined
</button>
`;

exports[`Storyshots inputs/Button Primary 1`] = `
<button
  className="sc-bjUoiL dVYXNF"
  color="primary"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots inputs/Button Secondary 1`] = `
<button
  className="sc-bjUoiL fqUvYH"
  color="secondary"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots inputs/ChipSelector Checkbox 1`] = `
<ul
  className="sc-gsnTZi cgptcv"
>
  <li
    className="sc-bczRLJ sc-gXmSlM eCwSUC fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-apple"
    >
      <input
        checked={true}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-apple"
        name="checkbox-apple"
        onChange={[Function]}
        type="checkbox"
      />
      林檎
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM iyvnPX fFtvOR"
    color="secondary"
    disabled={true}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-strawberry"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-strawberry"
        name="checkbox-strawberry"
        onChange={[Function]}
        type="checkbox"
      />
      苺
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-orange"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-orange"
        name="checkbox-orange"
        onChange={[Function]}
        type="checkbox"
      />
      オレンジ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-grapefruit"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-grapefruit"
        name="checkbox-grapefruit"
        onChange={[Function]}
        type="checkbox"
      />
      グレープフルーツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-coconut"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-coconut"
        name="checkbox-coconut"
        onChange={[Function]}
        type="checkbox"
      />
      ココナッツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-cherry"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-cherry"
        name="checkbox-cherry"
        onChange={[Function]}
        type="checkbox"
      />
      さくらんぼ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-pineapple"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-pineapple"
        name="checkbox-pineapple"
        onChange={[Function]}
        type="checkbox"
      />
      パイナップル
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-banana"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-banana"
        name="checkbox-banana"
        onChange={[Function]}
        type="checkbox"
      />
      バナナ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-grape"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-grape"
        name="checkbox-grape"
        onChange={[Function]}
        type="checkbox"
      />
      葡萄
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM epEICQ fFtvOR"
    color="secondary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="checkbox-raspberry"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="checkbox-raspberry"
        name="checkbox-raspberry"
        onChange={[Function]}
        type="checkbox"
      />
      木苺
    </label>
  </li>
</ul>
`;

exports[`Storyshots inputs/ChipSelector Docs 1`] = `
<li
  className="sc-bczRLJ sc-gXmSlM kaQvzq fFtvOR"
  color="primary"
  disabled={false}
>
  <label
    className="sc-cCsOjp jSIvih"
    htmlFor="docs"
  >
    <input
      checked={true}
      className="sc-ciZhAO jeUHLQ"
      id="docs"
      name="docs"
      onChange={[Function]}
      type="checkbox"
    />
    docs
  </label>
</li>
`;

exports[`Storyshots inputs/ChipSelector Radio 1`] = `
<ul
  className="sc-gsnTZi cgptcv"
>
  <li
    className="sc-bczRLJ sc-gXmSlM kaQvzq fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-apple"
    >
      <input
        checked={true}
        className="sc-ciZhAO jeUHLQ"
        id="radio-apple"
        name="radio-apple"
        onChange={[Function]}
        type="radio"
      />
      林檎
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM hrVvJR fFtvOR"
    color="primary"
    disabled={true}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-strawberry"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-strawberry"
        name="radio-strawberry"
        onChange={[Function]}
        type="radio"
      />
      苺
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-orange"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-orange"
        name="radio-orange"
        onChange={[Function]}
        type="radio"
      />
      オレンジ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-grapefruit"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-grapefruit"
        name="radio-grapefruit"
        onChange={[Function]}
        type="radio"
      />
      グレープフルーツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-coconut"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-coconut"
        name="radio-coconut"
        onChange={[Function]}
        type="radio"
      />
      ココナッツ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-cherry"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-cherry"
        name="radio-cherry"
        onChange={[Function]}
        type="radio"
      />
      さくらんぼ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-pineapple"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-pineapple"
        name="radio-pineapple"
        onChange={[Function]}
        type="radio"
      />
      パイナップル
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-banana"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-banana"
        name="radio-banana"
        onChange={[Function]}
        type="radio"
      />
      バナナ
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-grape"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-grape"
        name="radio-grape"
        onChange={[Function]}
        type="radio"
      />
      葡萄
    </label>
  </li>
  <li
    className="sc-bczRLJ sc-gXmSlM kFRnpC fFtvOR"
    color="primary"
    disabled={false}
  >
    <label
      className="sc-cCsOjp jSIvih"
      htmlFor="radio-raspberry"
    >
      <input
        checked={false}
        className="sc-ciZhAO jeUHLQ"
        id="radio-raspberry"
        name="radio-raspberry"
        onChange={[Function]}
        type="radio"
      />
      木苺
    </label>
  </li>
</ul>
`;

exports[`Storyshots inputs/IconButton Docs 1`] = `
<button
  className="sc-crXcEl lytTS"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-label="削除"
    className="sc-gKXOVf gfWmrp"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M16 9v10H8V9h8m-1.5-6h-5l-1 1H5v2h14V4h-3.5l-1-1zM18 7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7z"
    />
  </svg>
</button>
`;

exports[`Storyshots inputs/InputBase Docs 1`] = `
<input
  className="sc-gicCDI eAamlG"
  hasError={false}
  id="input-base"
  name="input-base-docs"
  type="text"
  value="input base sample"
/>
`;

exports[`Storyshots inputs/PasswordInput Docs 1`] = `
<div
  className="sc-bZkfAO iCCwRY"
>
  <input
    className="sc-gicCDI eAamlG"
    hasError={false}
    id="password-input"
    name="password-input-docs"
    type="password"
    value="password input sample"
  />
  <button
    className="sc-crXcEl lytTS sc-ezWOiH"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="パスワードを表示する"
      className="sc-gKXOVf dIMGbe"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6zm-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14zM2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45 2.01 3.87zm7.5 7.5l2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13zm-3.4-3.4l1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots inputs/TextArea Docs 1`] = `
<textarea
  className="sc-jdAMXn ktmMCZ"
  hasError={false}
  id="TextArea"
  name="text-area-docs"
  value="TextArea sample"
/>
`;

exports[`Storyshots inputs/TextButton Docs 1`] = `
<button
  className="sc-bjUoiL dVYXNF sc-idiyUo"
  color="primary"
  onClick={[Function]}
  type="button"
  variant="contained"
>
  TextButton
</button>
`;

exports[`Storyshots inputs/TextInput Docs 1`] = `
<div
  className="sc-jIZahH itKAIB"
>
  <input
    className="sc-gicCDI eAamlG"
    hasError={false}
    id="text-input"
    name="text-input-docs"
    type="text"
    value="text input sample"
  />
  <button
    className="sc-crXcEl lytTS sc-ikZpkk"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="text-input-docsの入力を削除する"
      className="sc-gKXOVf dIMGbe"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots navigation/Link Docs 1`] = `
<a
  className="sc-bZnhIo jqrdOe sc-iTONeN"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Link Story Component
</a>
`;

exports[`Storyshots navigation/Tabs Docs 1`] = `
<ul
  className="sc-iAvgwm igPOfF"
  role="tablist"
>
  <li
    className="sc-efBctP kzWYgl"
    color="secondary"
    role="presentation"
  >
    <button
      aria-controls="tab-panel-apple"
      aria-selected={false}
      onClick={[Function]}
      role="tab"
      type="button"
    >
      <span>
        林檎
      </span>
    </button>
  </li>
  <li
    className="sc-efBctP eymMFy"
    color="secondary"
    role="presentation"
  >
    <button
      aria-controls="tab-panel-strawberry"
      aria-selected={true}
      onClick={[Function]}
      role="tab"
      type="button"
    >
      <span>
        苺
      </span>
    </button>
  </li>
  <li
    className="sc-efBctP kzWYgl"
    color="secondary"
    role="presentation"
  >
    <button
      aria-controls="tab-panel-orange"
      aria-selected={false}
      onClick={[Function]}
      role="tab"
      type="button"
    >
      <span>
        オレンジ
      </span>
    </button>
  </li>
</ul>
`;

exports[`Storyshots surfaces/Accordion Docs 1`] = `
<section
  className="sc-cOFTSb jvTbOk"
>
  <button
    aria-controls="accordion-docs-section"
    aria-disabled={true}
    className="sc-jOrMOR lbWPpn"
    id="accordion-docs-header"
    onClick={[Function]}
  >
    <h3
      className="sc-dPyBCJ kQPHFE"
    >
      Accordion Component
    </h3>
    <svg
      aria-hidden={true}
      className="sc-gKXOVf KGKlu"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
  </button>
  <div
    aria-labelledby="accordion-docs-header"
    className="sc-bBXxYQ eXOFmH"
    id="accordion-docs-section"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</section>
`;

exports[`Storyshots surfaces/Card Docs 1`] = `
<section
  className="sc-hTtwUo bFHNpQ"
>
  <h3
    className="sc-BeQoi dgildX"
  >
    Card Component
  </h3>
  <hr
    className="sc-cTQhss inPZIY"
  />
  <div
    className="sc-kgUAyh iqFwTu"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</section>
`;

exports[`Storyshots surfaces/HeaderBar Docs 1`] = `
<header
  className="sc-lbxAil fDQHvW"
>
  <h2
    className="sc-gSAPjG gjzvdI"
  >
    HeaderBar Component
  </h2>
  <button
    aria-label="メニューを表示する"
    className="sc-crXcEl lytTS sc-jgbSNz ezPVUu"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="sc-gKXOVf dCngcJ"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
       
    </svg>
  </button>
</header>
`;

exports[`Storyshots surfaces/Paper Docs 1`] = `
<section
  className="sc-jfmDQi gLprao"
>
  <div
    className="sc-iNWwEs bzmNma"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</section>
`;

exports[`Storyshots utils/Backdrop With Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots utils/Divider Docs 1`] = `
<hr
  className="sc-cTQhss inPZIY"
/>
`;

exports[`Storyshots utils/LoadingGuard Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots utils/LoadingSpinner Docs 1`] = `
<svg
  aria-hidden={true}
  className="sc-gKXOVf gfWmrp sc-fnykZs jDVnbC"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
  />
</svg>
`;
